Revision history for Perl extension Mojolicious::Plugin::Webtail

0.05
        - Reverted to use the tail from the File::Tail
        - Added tail_opts option
        - Added --verbose option to bin/mwtail

0.04
        - Changed to use the File::Tail from the tail
        - Improved tests

0.03
        - Fixed a bug #83245

0.02
        - Added bin/mwtail

0.01
        - original version