@@ -1,0 +1,5 @@
+use lib 'inc';
+use Devel::AssertOS qw[-MicrosoftWindows];
+use 5.010001;
+use Module::Build::Tiny 0.019;
+Build_PL();
