@@ -1,28 +1,0 @@
-\bRCS\b
-\bCVS\b
-^MANIFEST\.
-^MYMETA\.
-^Makefile$
-~$
-^#
-\.old$
-^blib/
-^pm_to_blib
-^MakeMaker-\d
-\.gz$
-\.cvsignore
-^t/9\d_.*\.t
-^t/perlcritic
-^tools/
-\.svn/
-^[^/]+\.yaml$
-^[^/]+\.pl$
-^\.shipit$
-^\.git/
-\.sw[po]$
-^local/
-^junk/
-^\.carton/
-^carton.lock$
-^.gitignore$
-README.pod
