@@ -1,0 +1,64 @@
+{
+   "abstract" : "display tail to your browser",
+   "author" : [
+      "hayajo <hayajo@cpan.org>"
+   ],
+   "dynamic_config" : 0,
+   "generated_by" : "Dist::Milla version v1.0.2, Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Mojolicious-Plugin-Webtail",
+   "no_index" : {
+      "directory" : [
+         "inc"
+      ]
+   },
+   "prereqs" : {
+      "configure" : {
+         "requires" : {
+            "Devel::AssertOS" : "0",
+            "Module::Build::Tiny" : "0.019"
+         }
+      },
+      "develop" : {
+         "requires" : {
+            "Test::Pod" : "1.41"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "Mojolicious" : "3.02",
+            "Text::ParseWords" : "0",
+            "perl" : "5.010001"
+         }
+      },
+      "test" : {
+         "requires" : {
+            "Test::More" : "0.88"
+         }
+      }
+   },
+   "release_status" : "stable",
+   "resources" : {
+      "bugtracker" : {
+         "web" : "https://github.com/hayajo/Mojolicious-Plugin-Webtail/issues"
+      },
+      "homepage" : "https://github.com/hayajo/Mojolicious-Plugin-Webtail",
+      "repository" : {
+         "type" : "git",
+         "url" : "https://github.com/hayajo/Mojolicious-Plugin-Webtail.git",
+         "web" : "https://github.com/hayajo/Mojolicious-Plugin-Webtail"
+      }
+   },
+   "version" : "0.05",
+   "x_contributors" : [
+      "hayajo <hayato.imai@gmail.com>",
+      "hayato imai <hayato.imai@gmail.com>"
+   ]
+}
+
