@@ -1,27 +1,0 @@
-This is Perl module Mojolicious::Plugin::Webtail.
-
-INSTALLATION
-
-Mojolicious::Plugin::Webtail installation is straightforward. If your CPAN shell is set up,
-you should just be able to do
-
-    % cpan Mojolicious::Plugin::Webtail
-
-Download it, unpack it, then build it as per the usual:
-
-    % perl Makefile.PL
-    % make && make test
-
-Then install it:
-
-    % make install
-
-DOCUMENTATION
-
-Mojolicious::Plugin::Webtail documentation is available as in POD. So you can do:
-
-    % perldoc Mojolicious::Plugin::Webtail
-
-to read the documentation online with your favorite pager.
-
-hayajo
