@@ -1,64 +1,0 @@
-=head1 NAME
-
-Mojolicious::Plugin::Webtail - display tail to your browser
-
-=head1 SYNOPSIS
-
-  use Mojolicious::Lite;
-  plugin( 'Webtail', file => "/path/to/logfile", webtailrc => '/path/to/webtail.rc' );
-  app->start;
-
-  or
-
-  > perl -Mojo -e 'a->plugin("Webtail", file => "/path/to/logfile", webtailrc => "/path/to/webtail.rc")->start' daemon
-
-  or
-
-  > tail -f /path/to/logfile | perl -Mojo -e 'a->plugin("Webtail", webtailrc => "/path/to/webtail.rc")->start' daemon
-
-  and access "http://host:port/webtail" in your web browser.
-
-=head1 DESCRIPTION
-
-Mojolicious::Plugin::Webtail is display tail to your browser by WebSocket.
-
-=head1 METHODS
-
-L<Mojolicious::Plugin::Webtail> inherits all methods from L<Mojolicious::Plugin>.
-
-=head1 OPTIONS
-
-L<Mojolicious::Plugin::Webtail> supports the following options.
-
-=head2 C<file>
-
-displays the contents of C<file> or, by default, its C<STDIN>.
-
-=head2 C<webtailrc>
-
-define your custom callback in C<webtail> file.
-
-the code in C<webtail> file is executed when a new line is inserted.
-
-=head2 C<tail_opts>
-
-define tail options.
-
-default: '-f -n 0'
-
-=head1 AUTHOR
-
-hayajo E<lt>hayajo@cpan.orgE<gt>
-
-=head1 SEE ALSO
-
-L<https://github.com/r7kamura/webtail>
-
-=head1 LICENSE
-
-This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself.
-
-
-=cut
-
