@@ -1,0 +1,7 @@
+[@Milla]
+
+[AssertOS]
+os = -MicrosoftWindows
+
+[Prereqs / ConfigureRequires]
+Devel::AssertOS = 0
