@@ -1,2 +1,0 @@
-[TestingAndDebugging::ProhibitNoStrict]
-allow=refs
