@@ -1,4 +1,7 @@
-Revision history for Perl extension Mojolicious::Plugin::Webtail
+Revision history for Mojolicious-Plugin-Webtail
+
+{{$NEXT}}
+        - Millaize
 
 0.05
         - Reverted to use the tail from the File::Tail
